main layout, list cources layout